...
        textField.layer.borderColor = UIColor.gray.cgColor
        textField.layer.borderWidth = 2
        
        // Setup tableView
        tableView.estimatedRowHeight = 70
        tableView.keyboardDismissMode = .onDrag
        tableView.accessibilityIdentifier = "cryptoList"
    }
    
    @objc func textSearchChange(_ sender: UITextField){
        // Add throttle to reduce the filter times each time text is changed
        Throttler.go(delay: 0.5) { [weak self] in
            self?.presentor.filterCryptos(by: sender.text ?? "")
...
